--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "mongoose": "^8.21.0",
     "react": "^19.2.3",
