--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "mongoose": "^8.21.0",
+    "persistor": "^2.11.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.97.2",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
